test_suite5/ALAN/test_suite/alan-2022-examples/failing/007460_mutation.alan
source p begin relax end put
